--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>HTML Forms</title>
   </head>
-  <body></body>
+  <body>
+    <form action="/" method="GET">
+      <label for="username">Your name</label>
+      <input type="text" name="user-name" id="username" />
+      <button>Submit</button>
+    </form>
+  </body>
 </html>
