--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>HTML Forms</title>
   </head>
@@ -11,6 +17,72 @@
     <form action="/" method="GET">
       <label for="username">Your name</label>
       <input type="text" name="user-name" id="username" />
+
+      <label for="user-message">Your message</label>
+      <textarea name="message" id="user-message" cols="30" rows="10"></textarea>
+
+      <label for="useremail">Your email adress</label>
+      <input type="email" name="user-email" id="useremail" />
+      <label for="userage">Your age</label>
+      <input type="number" step="1" name="user-age" id="userage" />
+      <label for="userpassword">Your password</label>
+      <input type="password" name="user-password" id="userpassword" />
+      <label for="birthday">Your birthdate</label>
+      <input type="date" name="user-birthday" id="birthday" />
+
+      <label for="favorite-color">Your favorite color</label>
+      <select name="favorite-color" id="favorite-color">
+        <option value="blue">Blue</option>
+        <option value="black">Black</option>
+        <option value="red">Red</option>
+      </select>
+
+      <hr />
+      <h2>How should we verify your account?</h2>
+      <div class="form-control-inline">
+        <input
+          type="radio"
+          name="verify"
+          id="verify-text-message"
+          value="text-message"
+        />
+        <label for="verify-text-message">Via text message (SMS)</label>
+      </div>
+
+      <div class="form-control-inline">
+        <input type="radio" name="verify" id="verify-phone" value="phone" />
+        <label for="verify-phone">Via phone call</label>
+      </div>
+
+      <div class="form-control-inline">
+        <input type="radio" name="verify" id="verify-email" value="email" />
+        <label for="verify-email">Via an email</label>
+      </div>
+
+      <div class="form-control-inline">
+        <input type="checkbox" name="terms" id="agree-terms" />
+        <label for="agree-terms">Agree to terms?</label>
+      </div>
+
+      <div class="form-control-inline">
+        <input
+          type="checkbox"
+          name="contact"
+          id="contact-email"
+          value="email"
+        />
+        <label for="contact-email">Contact me via email</label>
+      </div>
+      <div class="form-control-inline">
+        <input
+          type="checkbox"
+          name="contact"
+          id="contact-phone"
+          value="phone"
+        />
+        <label for="contact-phone">Contact me via phone</label>
+      </div>
+
       <button>Submit</button>
     </form>
   </body>
