--- a/index.html
+++ b/index.html
@@ -14,76 +14,153 @@
     <title>HTML Forms</title>
   </head>
   <body>
-    <form action="/" method="GET">
-      <label for="username">Your name</label>
-      <input type="text" name="user-name" id="username" />
+    <header>
+      <h1>Demo Form</h1>
+    </header>
+    <main>
+      <form action="/" method="GET">
+        <section>
+          <h2>Your personal details</h2>
+          <ul>
+            <li>
+              <label for="username">Your name</label>
+              <input
+                type="text"
+                name="user-name"
+                id="username"
+                required
+                placeholder="Bo"
+              />
+            </li>
+            <li>
+              <label for="useremail">Your email adress</label>
+              <input type="email" name="user-email" id="useremail" required />
+            </li>
+            <li>
+              <label for="userpassword">Your password</label>
+              <input
+                type="password"
+                name="user-password"
+                id="userpassword"
+                required
+                minlength="7"
+              />
+            </li>
+          </ul>
+        </section>
 
-      <label for="user-message">Your message</label>
-      <textarea name="message" id="user-message" cols="30" rows="10"></textarea>
+        <section>
+          <h2>More details</h2>
+          <ul>
+            <li>
+              <label for="userage">Your age</label>
+              <input
+                type="number"
+                step="1"
+                name="user-age"
+                id="userage"
+                required
+                min="18"
+                max="100"
+              />
+            </li>
+            <li>
+              <label for="birthday">Your birthdate</label>
+              <input
+                type="date"
+                name="user-birthday"
+                id="birthday"
+                required
+                min="1921-01-01"
+                max="2003-01-01"
+              />
+            </li>
+            <li>
+              <label for="favorite-color">Your favorite color</label>
+              <select name="favorite-color" id="favorite-color">
+                <option value="blue">Blue</option>
+                <option value="black">Black</option>
+                <option value="red">Red</option>
+              </select>
+            </li>
+          </ul>
+        </section>
 
-      <label for="useremail">Your email adress</label>
-      <input type="email" name="user-email" id="useremail" />
-      <label for="userage">Your age</label>
-      <input type="number" step="1" name="user-age" id="userage" />
-      <label for="userpassword">Your password</label>
-      <input type="password" name="user-password" id="userpassword" />
-      <label for="birthday">Your birthdate</label>
-      <input type="date" name="user-birthday" id="birthday" />
+        <section>
+          <label for="user-message">Your message</label>
+          <textarea
+            name="message"
+            id="user-message"
+            cols="30"
+            rows="10"
+          ></textarea>
+        </section>
 
-      <label for="favorite-color">Your favorite color</label>
-      <select name="favorite-color" id="favorite-color">
-        <option value="blue">Blue</option>
-        <option value="black">Black</option>
-        <option value="red">Red</option>
-      </select>
+        <section>
+          <h2>How should we verify your account?</h2>
+          <ul>
+            <li class="form-control-inline">
+              <input
+                type="radio"
+                name="verify"
+                id="verify-text-message"
+                value="text-message"
+                required
+              />
+              <label for="verify-text-message">Via text message (SMS)</label>
+            </li>
+            <li class="form-control-inline">
+              <input
+                type="radio"
+                name="verify"
+                id="verify-phone"
+                value="phone"
+                required
+              />
+              <label for="verify-phone">Via phone call</label>
+            </li>
+            <li class="form-control-inline">
+              <input
+                type="radio"
+                name="verify"
+                id="verify-email"
+                value="email"
+                required
+              />
+              <label for="verify-email">Via an email</label>
+            </li>
+          </ul>
+        </section>
 
-      <hr />
-      <h2>How should we verify your account?</h2>
-      <div class="form-control-inline">
-        <input
-          type="radio"
-          name="verify"
-          id="verify-text-message"
-          value="text-message"
-        />
-        <label for="verify-text-message">Via text message (SMS)</label>
-      </div>
+        <section>
+          <h2>How shall we contact you?</h2>
+          <ul>
+            <li class="form-control-inline">
+              <input type="checkbox" name="contact" id="contact-email"
+              value="email" /li>
+              <label for="contact-email">Contact me via email</label>
+            </li>
+            <li class="form-control-inline">
+              <input type="checkbox" name="contact" id="contact-phone"
+              value="phone" /li>
+              <label for="contact-phone">Contact me via phone</label>
+            </li>
+          </ul>
+        </section>
 
-      <div class="form-control-inline">
-        <input type="radio" name="verify" id="verify-phone" value="phone" />
-        <label for="verify-phone">Via phone call</label>
-      </div>
+        <hr />
 
-      <div class="form-control-inline">
-        <input type="radio" name="verify" id="verify-email" value="email" />
-        <label for="verify-email">Via an email</label>
-      </div>
+        <section>
+          <div class="form-control-inline">
+            <input type="checkbox" name="terms" id="agree-terms" />
+            <label for="agree-terms">Agree to terms?</label>
+          </div>
+        </section>
 
-      <div class="form-control-inline">
-        <input type="checkbox" name="terms" id="agree-terms" />
-        <label for="agree-terms">Agree to terms?</label>
-      </div>
-
-      <div class="form-control-inline">
-        <input
-          type="checkbox"
-          name="contact"
-          id="contact-email"
-          value="email"
-        />
-        <label for="contact-email">Contact me via email</label>
-      </div>
-      <div class="form-control-inline">
-        <input
-          type="checkbox"
-          name="contact"
-          id="contact-phone"
-          value="phone"
-        />
-        <label for="contact-phone">Contact me via phone</label>
-      </div>
-
-      <button>Submit</button>
-    </form>
+        <section>
+          <button type="submit">Submit</button>
+        </section>
+      </form>
+    </main>
   </body>
 </html>
